Fix dashboard dropdown being smaller than the text
In French for example the arrow was overlapping the text in the word "Assistance".

--- a/css/standalone/dashboard.scss
+++ b/css/standalone/dashboard.scss
@@ -286,7 +286,7 @@ $break_tablet: 1400px;
             padding: 5px;
             border: 2px solid var(--input-border);
             border-radius: 3px;
-            min-width: 100px;
+            min-width: 140px;
             cursor: pointer;
 
             option {
